cc/tests/fixtures/positive/16-pp-undef.c
#define VALUE 42
#undef VALUE
int y = 1;
