cc/tests/fixtures/negative/05-preprocessing-directive.c
#define VALUE 42
int x = VALUE;
